@@ -1,5 +1,9 @@
 2014-05-27  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Traverse.cpp: 
+
+2014-05-27  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Parser.cpp:
 	* Route.cpp:
 	* FieldSet.cpp:
